# jukebox

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  cross.toml  install.sh  uninstall.sh
.github/workflows/: release.yml
src/: main.rs
src/libs/: ffmpeg.rs  mod.rs  ytdlp.rs
src/music_info/: mod.rs  song.rs  youtube.rs
src/networking/: local_ip.rs  mdns.rs  mod.rs  page_router.rs  player_router.rs  qr.rs  queue_router.rs  server.rs
src/paths/: deps.rs  mod.rs
src/player/: mod.rs  queue.rs  sink.rs
static/: 404.html  admin.html  index.html
