[package]
name = "jukebox"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures-util = "0.3.32"
image = "0.25.10"
mdns-sd = "0.18.2"
qrcode = "0.14.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["stream", "blocking", "json"] }
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
xz2 = "0.1.7"
zip = "8.2.0"
